--- a/calc2.html
+++ b/calc2.html
@@ -1,5 +1,9 @@
  
   	<link data-n-head="ssr" rel="stylesheet" href="./calc/common.css">
+   <style>
+    body .buy-products__buttons-wrap { display: block;}
+    body .buy-products__button { line-height: 16px;}    
+</style>
   	<script charset="utf-8" src="./calc/449164f.js"></script>
     <div id="__nuxt">
  
